# taasisatSeniorNew

./: .gitignore  AI_START_HERE.md  ARCHITECTURE_INTAKE_REPORT_v1.0.md  DOCUMENTATION_RULES.md  NEXT_TASK.md  PHASE_1_IMPLEMENTATION_PLAN.md  PROJECT_CONTINUATION.md  README.md
src/: .dockerignore  .env.docker  .env.example  .gitignore  RUN_NATIVE_NO_VENV.md  SPRINT_2_NATIVE_RUNTIME_VERIFICATION.md  SPRINT_3A2_VERIFICATION.md  docker-compose.yml  e2e_validation.py  fix_perms.py  package-lock.json  package.json  pyproject.toml  runserver_native.ps1  setup_db.py  tailwind.config.js
src/.github/workflows/: ci.yml
src/apps/accounts/: admin.py  apps.py  forms.py  permission_keys.py  urls.py  views.py
src/apps/admin_portal/: apps.py  forms.py  permission_keys.py  permissions.py  urls.py  views.py
src/apps/api/: apps.py  errors.py  exception_handler.py  pagination.py  permission_keys.py  permissions.py  serializers.py  urls.py  views.py
src/apps/availability/: apps.py  models.py
src/apps/booking/: apps.py  models.py  permission_keys.py
src/apps/commission/: apps.py  jobs.py  permission_keys.py
src/apps/common/: enums.py  managers.py  models.py  validators.py
src/apps/discovery/: apps.py
src/apps/execution/: apps.py  models.py  permission_keys.py
src/apps/finance/: apps.py  permission_keys.py
src/apps/jobs/: apps.py  errors.py  handlers.py  models.py  registry.py
src/apps/kernel/: admin.py  apps.py  dev_tenant.py  role_catalog.py  tasks.py  views.py
src/apps/matching/: apps.py  models.py
src/apps/notifications/: apps.py  dto.py  errors.py  jobs.py  models.py
src/apps/orders/: admin.py  apps.py  models.py
src/apps/organization_portal/: apps.py  forms.py  permissions.py  urls.py  views.py
src/apps/payments/: apps.py  jobs.py  models.py
src/apps/portal/: apps.py  forms.py  permissions.py  urls.py  views.py
src/apps/pricing/: apps.py  models.py
src/apps/provider_portal/: apps.py  forms.py  permissions.py  urls.py  views.py
src/apps/public_site/: apps.py  context_processors.py  urls.py  views.py
src/apps/reporting/: apps.py  dto.py
src/apps/reviews/: apps.py  models.py
src/apps/showcase/: apps.py  urls.py  views.py
src/apps/wallet/: apps.py  models.py
src/config/: __init__.py  asgi.py  celery.py  urls.py  wsgi.py
src/config/settings/: base.py  development.py  production.py  testing.py
src/docker/: Dockerfile.dev  entrypoint.sh
src/requirements/: base.txt  dev.txt  prod.txt  test.txt
src/scripts/: build-alpine.js
src/static/css/: enterprise-supplement.css  output.css
src/templates/accounts/: base_auth.html  login.html  pending.html  register.html  register_caregiver.html  register_company.html  register_customer.html  success.html  verify.html
src/templates/admin_portal/: _sidebar_nav.html  base.html  caregiver_activation_detail.html  dispute_detail.html  dispute_queue.html  document_verification_detail.html  document_verification_queue.html  escrow_detail.html  escrow_overview.html  feature_gate_overview.html  finance_overview.html  home.html  order_overview.html  (+6 more)
src/tools/: validate_components.py  validate_rtl.py  validate_themes.py  validate_tokens.py
src/ui/: SPRINT_3A_VERIFICATION.md
(+1499 files in other folders)
