[project]
name = "marketplace-platform"
version = "0.1.0"
description = "Enterprise Service Marketplace Platform — Generic Service Marketplace Framework"
requires-python = ">=3.12"
license = {text = "Proprietary"}

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "COM", "C4", "DJ", "T20", "SIM"]
ignore = [
    "COM812",  # trailing comma (conflicts with formatter)
    "E501",    # line too long (handled by formatter)
    "B904",    # raise-without-from-inside-except (established pattern)
    "B017",    # assert-raises-exception (test pattern)
    "SIM105",  # suppressible-exception (style preference)
    "SIM117",  # multiple-with-statements (style preference)
    "SIM115",  # open-file-with-context-handler (style preference)
    "E402",    # module-import-not-at-top-of-file (Django settings)
    "SIM102",  # collapsible-if (readability preference)
    "SIM110",  # reimplemented-builtin (clarity preference)
    "SIM103",  # needless-bool (clarity preference)
    "SIM108",  # if-else-block-instead-of-if-exp (readability preference)
    "N818",    # error-suffix-on-exception-name (established naming)
    "N802",    # invalid-function-name (established naming)
    "C408",    # unnecessary-collection-call (style preference)
    "C401",    # unnecessary-generator-set (style preference)
    "B905",    # zip-without-explicit-strict (py3.10+ pattern)
    "DJ001",   # django-nullable-model-string-field (design decision)
    "DJ007",   # django-all-with-model-form (design decision)
    "DJ012",   # django-unordered-body-content-in-model (style)
    "UP042",   # replace-str-enum (pending migration)
    "F841",    # unused-variable (often intentional in tests/services)
]

[tool.ruff.lint.per-file-ignores]
"tools/*" = ["T201"]
"apps/*/management/commands/*" = ["T201"]
"e2e_validation.py" = ["T201"]
"setup_db.py" = ["T201"]
"fix_perms.py" = ["T201"]
"config/celery.py" = ["T201"]
"**/__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["apps", "config"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.testing"
python_files = ["tests.py", "test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
